--- a/.github/workflows/hoge.yaml
+++ b/.github/workflows/hoge.yaml
@@ -14,11 +14,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Update pip
+        run: python -m pip install --upgrade pip
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry flake8 pytest
-          poetry install
+        run: pip install poetry flake8 pytest
+      - name: Install Poetry
+        run: poetry install --no-interaction && 
       - name: Test with pytest
         run: |
           pytest
