--- a/.github/workflows/hoge.yaml
+++ b/.github/workflows/hoge.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Update pip
         run: python -m pip install --upgrade pip
       - name: Install dependencies
-        run: pip install poetry flake8 pytest
+        run: pip install poetry
       - name: Install Poetry
         run: poetry install --no-interaction
       - name: Test with pytest
