--- a/.github/workflows/hoge.yaml
+++ b/.github/workflows/hoge.yaml
@@ -21,5 +21,7 @@ jobs:
         run: pip install poetry
       - name: Install Poetry
         run: poetry install --no-interaction
+      - name: Lint
+        run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
       - name: Test with pytest
         run: poetry run pytest -vv
