--- a/.github/workflows/hoge.yaml
+++ b/.github/workflows/hoge.yaml
@@ -19,8 +19,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry flake8
-      - name: Install dependencies
-        run: pip install poetry flake8
+#      - name: Install dependencies
+#        run: pip install poetry flake8
       - name: Install Poetry
         run: poetry install --no-interaction
       - name: Lint
