--- a/.github/workflows/hoge.yaml
+++ b/.github/workflows/hoge.yaml
@@ -2,14 +2,13 @@ name: Python package
 on: [push]
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.9]
 
     steps:
-      
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
