--- a/.github/workflows/hoge.yaml
+++ b/.github/workflows/hoge.yaml
@@ -7,21 +7,23 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.9]
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Update pip
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install poetry flake8
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Install Poetry
-        run: poetry install --no-interaction
-      - name: Lint
         run: |
+          pip install poetry
+          poetry install --no-interaction
+      - name: Lint with flake8
+        run: |
+          pip install flake8
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
