--- a/.github/workflows/hoge.yaml
+++ b/.github/workflows/hoge.yaml
@@ -13,10 +13,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Update pip
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Install Poetry
         run: |
           pip install poetry
