--- a/.github/workflows/hoge.yaml
+++ b/.github/workflows/hoge.yaml
@@ -22,7 +22,7 @@ jobs:
           poetry install --no-interaction
       - name: Lint with flake8
         run: |
-          pip install flake8
+          poetry add --dev flake8
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
